// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[NewFile] Scanning files should save a new entry and emit an event - album file 1`] = `
Object {
  "hfile": Object {
    "dir": "myAlbum",
    "file": "PHOTO1.jpg",
    "source": "first",
  },
  "root": "/home/lelouch/first",
}
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - album file 2`] = `
Array [
  Photo {
    "ISO": null,
    "album": Album {
      "dir": "myAlbum",
      "id": 3,
      "inode": "917664116",
      "parentDir": "",
      "photos": undefined,
      "source": "first",
      "sourceLk": undefined,
    },
    "aperture": null,
    "birthtime": 3,
    "createDate": null,
    "ctime": 2,
    "dir": "myAlbum",
    "file": "PHOTO1.jpg",
    "id": 1,
    "inode": -1661168401,
    "make": null,
    "model": null,
    "mtime": 1,
    "parentDir": "",
    "processedAperture": null,
    "processedShutter": null,
    "searchResults": undefined,
    "shutter": null,
    "size": 10,
    "source": "first",
    "status": "not_processed",
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - album file 3`] = `
Array [
  Album {
    "dir": "",
    "id": 1,
    "inode": "-1714723644",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./second",
      "id": 1,
      "source": "second",
    },
  },
  Album {
    "dir": "",
    "id": 2,
    "inode": "1179740256",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
  Album {
    "dir": "myAlbum",
    "id": 3,
    "inode": "917664116",
    "parentDir": "",
    "photos": Array [
      Photo {
        "ISO": null,
        "album": undefined,
        "aperture": null,
        "birthtime": 3,
        "createDate": null,
        "ctime": 2,
        "dir": "myAlbum",
        "file": "PHOTO1.jpg",
        "id": 1,
        "inode": -1661168401,
        "make": null,
        "model": null,
        "mtime": 1,
        "parentDir": "",
        "processedAperture": null,
        "processedShutter": null,
        "searchResults": undefined,
        "shutter": null,
        "size": 10,
        "source": "first",
        "status": "not_processed",
      },
    ],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - root file 1`] = `
Object {
  "hfile": Object {
    "dir": "",
    "file": "PHOTO1.jpg",
    "source": "first",
  },
  "root": "/home/lelouch/first",
}
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - root file 2`] = `
Array [
  Photo {
    "ISO": null,
    "album": Album {
      "dir": "",
      "id": 2,
      "inode": "1179740256",
      "parentDir": "",
      "photos": undefined,
      "source": "first",
      "sourceLk": undefined,
    },
    "aperture": null,
    "birthtime": 3,
    "createDate": null,
    "ctime": 2,
    "dir": "",
    "file": "PHOTO1.jpg",
    "id": 1,
    "inode": -600107901,
    "make": null,
    "model": null,
    "mtime": 1,
    "parentDir": "",
    "processedAperture": null,
    "processedShutter": null,
    "searchResults": undefined,
    "shutter": null,
    "size": 10,
    "source": "first",
    "status": "not_processed",
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - root file 3`] = `
Array [
  Album {
    "dir": "",
    "id": 1,
    "inode": "-1714723644",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./second",
      "id": 1,
      "source": "second",
    },
  },
  Album {
    "dir": "",
    "id": 2,
    "inode": "1179740256",
    "parentDir": "",
    "photos": Array [
      Photo {
        "ISO": null,
        "album": undefined,
        "aperture": null,
        "birthtime": 3,
        "createDate": null,
        "ctime": 2,
        "dir": "",
        "file": "PHOTO1.jpg",
        "id": 1,
        "inode": -600107901,
        "make": null,
        "model": null,
        "mtime": 1,
        "parentDir": "",
        "processedAperture": null,
        "processedShutter": null,
        "searchResults": undefined,
        "shutter": null,
        "size": 10,
        "source": "first",
        "status": "not_processed",
      },
    ],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - sub-album file 1`] = `
Object {
  "hfile": Object {
    "dir": "myAlbum/mySubAlbum",
    "file": "PHOTO1.jpg",
    "source": "first",
  },
  "root": "/home/lelouch/first",
}
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - sub-album file 2`] = `
Array [
  Photo {
    "ISO": null,
    "album": Album {
      "dir": "myAlbum/mySubAlbum",
      "id": 3,
      "inode": "-530420394",
      "parentDir": "myAlbum",
      "photos": undefined,
      "source": "first",
      "sourceLk": undefined,
    },
    "aperture": null,
    "birthtime": 3,
    "createDate": null,
    "ctime": 2,
    "dir": "myAlbum/mySubAlbum",
    "file": "PHOTO1.jpg",
    "id": 1,
    "inode": -717936823,
    "make": null,
    "model": null,
    "mtime": 1,
    "parentDir": "myAlbum",
    "processedAperture": null,
    "processedShutter": null,
    "searchResults": undefined,
    "shutter": null,
    "size": 10,
    "source": "first",
    "status": "not_processed",
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - sub-album file 3`] = `
Array [
  Album {
    "dir": "",
    "id": 1,
    "inode": "-1714723644",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./second",
      "id": 1,
      "source": "second",
    },
  },
  Album {
    "dir": "",
    "id": 2,
    "inode": "1179740256",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
  Album {
    "dir": "myAlbum/mySubAlbum",
    "id": 3,
    "inode": "-530420394",
    "parentDir": "myAlbum",
    "photos": Array [
      Photo {
        "ISO": null,
        "album": undefined,
        "aperture": null,
        "birthtime": 3,
        "createDate": null,
        "ctime": 2,
        "dir": "myAlbum/mySubAlbum",
        "file": "PHOTO1.jpg",
        "id": 1,
        "inode": -717936823,
        "make": null,
        "model": null,
        "mtime": 1,
        "parentDir": "myAlbum",
        "processedAperture": null,
        "processedShutter": null,
        "searchResults": undefined,
        "shutter": null,
        "size": 10,
        "source": "first",
        "status": "not_processed",
      },
    ],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
]
`;
